News for Paludis
================

This file lists the major changes between versions. For a more detailed list
of every change, see the Git log.

0.70.1:
    * 'cave search' now has a '--case-sensitive' option.

    * Assorted bug fixes.

0.70.0:
    * 'cave sync --suffix' is now known as '--source' (although the old
      version is still supported for compatibility).  The short version is
      still '-s'.

    * Command-line arguments that have a short version and can be negated
      with '--no-*' can now be negated in short form by using '+' instead
      of '-', for example '+x' for '--no-execute'.

    * Manifest files for E repositories are now generated with the lines in the
      same order as Portage.

    * The SHA-512 and Whirlpool functions are now supported in Manifest files.

    * The hash functions used to generate Manifest files can now be controlled
      by either the repository itself or user configuration.

0.68.0:
    * Licence groups are now supported.

    * Various bug fixes.

0.66.0:
    * The short options for 'cave owner' and 'cave print-owner' have changed.

    * Support for directory whitelisting for exheres-0.

    * Various bug fixes.

0.64.3:
    * Fixed a bug where a ! inside a || ( ) could cause a segfault.

    * Assorted minor bug fixes and compiler compatibility changes.

0.64.2:
    * The Python bindings now cover various additional things.

    * CONFIG_PROTECT is now available for merge-check hooks.

    * When using Portage format configurations, userpriv is now available.

0.64.1:
    * 'cave resolve --keep if-same-metadata' now thinks "cat/pkg[a][b]" and
      "cat/pkg[b][a]" are "the same".

    * Support for Portage-format configurations has been improved slightly.

0.64.0:
    * Support for Gentoo old-style virtuals has been removed.

    * The 'accerso', 'instruo' and 'appareo' clients have been removed in favour
      of 'cave'.

    * 'cave resolve' now has 'if-same-metadata' options for '--keep' and