@@ -7,5 +7,6 @@ default_manifest_hashes =
 default_names_cache = /var/cache/paludis/names
 default_profile_eapi = exheres-0
 default_profile_layout = exheres
+default_thin_manifests = false
 default_write_cache = /var/cache/paludis/metadata
 news_directory = /var/lib/exherbo/news
