@@ -7,5 +7,6 @@ default_manifest_hashes = RMD160 SHA1 SHA256
 default_profile_layout = traditional
 default_names_cache =
 default_profile_eapi = 0
+default_thin_manifests = false
 default_write_cache = /var/empty
 news_directory = /var/lib/gentoo/news
